syntax = "proto3";

option java_package = "com.wblog.proto";
option java_outer_classname = "CommentContentProto";
import "google/protobuf/timestamp.proto";

message comment_content {
    int64 id = 1;
    int64 blogId =2;
    string commentContent = 3;
    string commenter = 4;
    google.protobuf.Timestamp createDate = 5;
}